# docker-llm

./: README.md  app.env  docker-compose.yaml
app/: .dockerignore  Dockerfile  basic.py  chat.py  main.py  pyproject.toml
